--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,26 @@
     align-items: center;
 }
 
+.skill-item.java img {
+    width: 100px; 
+    height: 100px; 
+    background-color: #bba7a5; 
+    border: 2px solid white; 
+    border-radius: 15px; 
+}
+
+.skill-item.bootstrap img {
+    width: 100px; 
+    height: 100px;
+}
+
+
+
+.skills-content .skill-item:nth-child(2) {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
 .skill-item span {
     margin-top: 15px;
     margin-bottom: 15px;
